# diff-rust-projects

./: .gitignore  README.md
project1/: Cargo.toml  README.MD  README.md  main.http
project1/deploy/: Dockerfile  docker-compose.yml
project1/src/: forms.rs  generator.rs  main.rs  parser.rs  views.rs
project2/: Cargo.toml  README.MD  README.md
project2/src/: forms.rs  game.rs  generator.rs  main.rs  parser.rs  views.rs
project3/: README.md
project3/src/: main.rs
