[package]
name = "temperature"
version = "0.1.0"
authors = ["Rassel <Rassel>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
