[package]
name = "temperature"
version = "0.1.0"
authors = ["Rassel <Rassel>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = "0.4"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
